--- a/css/style.css
+++ b/css/style.css
@@ -757,6 +757,7 @@ box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.2);
 }
 .more-left{
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 .hobby,
